--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "example-create-react-app-express",
 	"version": "1.0.0",
 	"scripts": {
+		"start": "node server.js",
 		"client": "cd client && npm start",
 		"server": "nodemon server.js",
 		"dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
