--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"scripts": {
 		"start": "node server.js",
+		"heroku-postbuild": "cd client && npm install && npm run build",
 		"client": "cd client && npm start",
 		"server": "nodemon server.js",
 		"dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
